@@ -58,6 +58,7 @@ tickit_renderbuffer_ungoto.3 = tickit_renderbuffer_goto.3
 tickit_renderbuffer_has_cursorpos.3 = tickit_renderbuffer_get_cursorpos.3
 tickit_renderbuffer_skip_to.3 = tickit_renderbuffer_skip.3
 tickit_renderbuffer_skip_at.3 = tickit_renderbuffer_skip.3
+tickit_renderbuffer_skiprect.3 = tickit_renderbuffer_skip.3
 tickit_renderbuffer_text_at.3 = tickit_renderbuffer_text.3
 tickit_renderbuffer_textn.3 = tickit_renderbuffer_text.3
 tickit_renderbuffer_textn_at.3 = tickit_renderbuffer_text.3
