@@ -55,7 +55,7 @@ The stored content can be flushed to a \fBTickitTerm\fP instance using \fBtickit
 .SH "DRAWING OPERATIONS"
 The following functions all affect the stored content within the buffer, taking into account the clipping, translation, masking, stored pen, and optionally the virtual cursor position.
 .PP
-\fBtickit_renderbuffer_skip_at\fP(3), \fBtickit_renderbuffer_skip\fP(3) and \fBtickit_renderbuffer_skip_to\fP(3) create a skipping region; a place where no output will be drawn.
+\fBtickit_renderbuffer_skip_at\fP(3), \fBtickit_renderbuffer_skip\fP(3), \fBtickit_renderbuffer_skip_to\fP(3) and \fBtickit_renderbuffer_skiprect\fP(3) create a skipping region; a place where no output will be drawn.
 .PP
 \fBtickit_renderbuffer_text_at\fP(3) and \fBtickit_renderbuffer_text\fP(3) create a text region; a place where normal text is output.
 .PP
