@@ -11,3 +11,4 @@
      + tickit_string_count*   => tickit_utf8_count*
   * Added TickitString
   * Added tickit_rectset_get_rect(3)
+  * Added tickit_renderbuffer_skiprect(3)
